tests/errors/preprocessor/033_include.c.expect
./tests/errors/preprocessor/033_include.c:1:10: error: missing terminating char '>' for literal
1 | #include <file.h
             ^
